Dependencies in Java

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,15 @@
   <groupId>com.mavanproject</groupId>
   <artifactId>example</artifactId> <!-- The name of the jar file that will be created-->
   <version>1.0</version>
+
+  <dependencies>
+    <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+        <version>3.8.1</version>
+    </dependency>
+  </dependencies>
+  
   <build>
     <plugins>
         <plugin>
